<resources>
    <string name="app_name">AppAlgogame</string>
    <string name="txt_nome">Nome</string>
    <string name="txt_nome_hint">Digite seu nome...</string>
    <string name="bt_OK">OK</string>
    <string name="bt_novo_jogo">Novo Jogo</string>
    <string name="bt_tutorial">Tutorial</string>
    <string name="bt_comp_pont">Compartilhar Pontuação</string>
    <string name="bt_sobre">Sobre</string>
    <string name="modoJogo_ord">Ordenação</string>
    <string name="modoJogo_mult">Múltipla Escolha</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txtSobre">Este app foi desenvolvido como projeto de TCC do Curso de Tecnologia em Análise e Desenvolvimento de Sistemas pelos discentes Dennys Farias, Denilson Nogueira e Renatos Santos sob orientação do Profº Msc. Alan Marcel Souza. Todos direitos reservados.</string>
</resources>
